--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 </head>
 <body class="contenedor-principal">
     
-    <header class="subcontenedor header">
-        
+    <header id="header--link" class="subcontenedor header">
+        <nav id="navbar" class="navbar">
+            <ul class="ul--navbar">
+                <li><a class="opcion" href="#header--link">Home</a></li>
+                <li><a class="opcion" href="#Services">Servicios</a></li>
+                <li><a class="opcion" href="#About--me">Acerca de mi</a></li>
+                <li><a class="opcion" href="#my--skills--link">Mis habilidades</a></li>
+                <li><a class="opcion" href="#portafolio--link">Mi portafolio</a></li>
+                <li><a class="opcion" href="#contac--link">Contacto</a></li>
+            </ul>
+            <div class="logo"><img class="logo--imagen" src="./assets/íconos/menu 1.svg" alt=""></div>
+        </nav>
         <div class="section-header uno">
             <h2>Soy</h2>
             <h1>Milton</h1>
@@ -21,9 +31,9 @@
             <h2>2 años</h2>
             <h2>experiencia</h2>
             <div class="contenedor-redes">
-                <div class="redes"></div>
-                <div class="redes"></div>
-                <div class="redes"></div>
+                <a href="https://www.linkedin.com/in/milton-lopez-almendras-539aa21ab/" target="_blank" class="redes"></a>
+                <a href="https://www.instagram.com/vilo_lop/" target="_blank" class="redes"></a>
+                <a href="https://twitter.com/MilodevCode" target="_blank" class="redes"></a>
             </div>
         </div>
         <div class="section-header tres">
@@ -34,11 +44,11 @@
         <div class="contenedor-perfil"></div>
     </header>
     <main class="subcontenedor main">
-        <div class="subsection acerca-de-mi">
+        <div id="About--me" class="subsection acerca-de-mi">
             <h2>Acerca de mí</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto magni eum repellendus vero corrupti molestiae, cum animi minima sint eligendi exercitationem nostrum neque rem blanditiis veniam sed, lorefasdfasdfadfadsfadfadsculpa minus error!</p>
+            <p>Soy un tipo de trabajador que está acostumbrado al trabajo bajo presión, tengo varios años de experiencia en atención al cliente y en búsqueda de oportunidades comerciales. También me considero una persona resolutiva, con buen ánimo y capaz de resolver problemas fácilmente</p>
         </div>
-        <div class="subsection servicios">
+        <div id="Services" class="subsection servicios">
             <h2>Servicios</h2>
             <div class="slider-servicios">
                 <ul>
@@ -60,39 +70,39 @@
                 </ul>
             </div>
         </div>
-        <div class="subsection mis-habilidades">
+        <div id="my--skills--link" class="subsection mis-habilidades">
             <h2>Mis habilidades</h2>
             <article class="skill-card">
                 <h2>Front End</h2>
                 <div class="skills">
                     <div class="skills-item">
                         <p class="skills-tech">HTML</p>
-                        <div class="skills-bar skills-bar-70">
+                        <div class="skills-bar skills-bar-75">
                             <div class="skills-progress"></div>
                         </div>
                     </div>
                     <div class="skills-item">
                         <p class="skills-tech">CSS</p>
-                        <div class="skills-bar skills-bar-70">
+                        <div class="skills-bar skills-bar-80">
                             <div class="skills-progress"></div>
                         </div>
                     </div>
                     <div class="skills-item">
                         <p class="skills-tech">JavaScript</p>
-                        <div class="skills-bar skills-bar-70">
+                        <div class="skills-bar skills-bar-60">
                             <div class="skills-progress"></div>
                         </div>
                     </div>
                     <div class="skills-item">
                         <p class="skills-tech">React</p>
-                        <div class="skills-bar skills-bar-70">
+                        <div class="skills-bar skills-bar-30">
                             <div class="skills-progress"></div>
                         </div>
                     </div>
                 </div>
             </article>
         </div>
-        <div class="subsection mi-portafolio">
+        <div id="portafolio--link" class="subsection mi-portafolio">
             <h2>Mi Portafolio</h2>
             <div class="slider-portafolio">
                 <ul>
@@ -111,7 +121,7 @@
                 </ul>
             </div>
         </div>
-        <div class="subsection contacto">
+        <div id="contac--link" class="subsection contacto">
             <h2>Contacto</h2>
             <article class="contact-card">
                 <div class="contact-whatsapp"><img src="./assets/íconos/phone 3.svg" alt=""></div>
@@ -122,7 +132,8 @@
         </div>
     </main>
     <footer class="subcontenedor footer">
-        <h2>Aca vendria un footer decente pero el sueño me gano</h2>
+        <h2>Con amor desde Academlo</h2>
     </footer>
+    <script src="./main.js"></script>
 </body>
 </html>
